--- a/templates/enseignants/enseignant_form.html
+++ b/templates/enseignants/enseignant_form.html
@@ -1,10 +1,10 @@
 {% extends 'base.html' %}
 
-{% block title %}{% if object %}Modifier Enseignant{% else %}Lier un Enseignant{% endif %}{% endblock %}
+{% block title %}{% if object %}Modifier Enseignant{% else %}Ajouter Enseignant{% endif %}{% endblock %}
 
 {% block content %}
 <div class="page-header">
-    <h2>{% if object %}Modifier le lien de l'Enseignant{% else %}Lier un Utilisateur à un profil Enseignant{% endif %}</h2>
+    <h2>{% if object %}Modifier l'Enseignant{% else %}Ajouter un nouvel Enseignant{% endif %}</h2>
 </div>
 
 <div class="form-container">
