Add deployment and presentation

--- a/templates/home.html
+++ b/templates/home.html
@@ -19,13 +19,7 @@
     </div>
 
     <div class="home-info">
-        <h3>Prochaines étapes :</h3>
-        <ul>
-            <li>Mise en place de l'authentification avec un portail Enseignant et un portail Étudiant.</li>
-            <li>Fonctionnalités de saisie de notes (manuelle et par import de fichier).</li>
-            <li>Génération de relevés de notes en PDF.</li>
-            <li>Calcul des classements par UE et général.</li>
-        </ul>
+        <h3>Bienvenue sur le Gestionnaire de Notes BUT</h3>
     </div>
 </div>
 {% endblock %}
